# demo-modeller

./: .gitignore  Assign_3.ali  README.md  hw3.md  init_modeller.sh  pyproject.toml
data/: More_hits
data/align2d/: Assign_3-3kc6.ali  Assign_3-3kc6.pap
data/compare/: family.mat
data/evaluate_model/: 3kc6.profile  Assign_3.profile
data/model_single/: Assign_3.D00000001  Assign_3.D00000002  Assign_3.D00000003  Assign_3.D00000004  Assign_3.D00000005  Assign_3.V99990001  Assign_3.V99990002  Assign_3.V99990003  Assign_3.V99990004  Assign_3.V99990005  Assign_3.ini  Assign_3.rsr
data/pdb/: pdb_codes.txt
data/structure_search/: Assign_3.ali  build_profile.ali  build_profile.prf  build_profile.txt
src/: 1.build_profile.ipynb  2.compare.ipynb  2.download_pdb.sh  3.align2d.ipynb  4.model_single.ipynb  5.evaluate_model.ipynb  StructureSearch.ipynb
