[tool.poetry]
name = "protein-struct-modeller"
version = "0.1.0"
description = ""
authors = ["AFirooz <ali.emad649@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^75.6.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
nbconvert = "^7.16.4"
nbformat = "^5.10.4"
orjson = "^3.10.12"
jupyter = "^1.1.1"
tqdm = "^4.67.1"
toml = "^0.10.2"
openpyxl = "^3.1.5"
pyyaml = "^6.0.2"
scipy = "^1.14.1"
lxml = "^5.3.0"
varname = "^0.13.5"
ipynbname = "^2024.1.0.0"
notebook = "^7.3.1"
ipython = "^8.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
